[gd_scene load_steps=4 format=3 uid="uid://cblq4x3wxn0oe"]

[ext_resource type="Script" path="res://#3 River Raid/Assets #3/scripts/projectile.gd" id="1_0gj5s"]

[sub_resource type="QuadMesh" id="QuadMesh_1yypg"]
size = Vector2(1, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6tgi"]
size = Vector2(1, 2)

[node name="Projectile" type="Node2D"]
script = ExtResource("1_0gj5s")

[node name="ProjArea" type="Area2D" parent="." groups=["projectile"]]
collision_layer = 64
collision_mask = 130

[node name="MeshInstance2D" type="MeshInstance2D" parent="ProjArea"]
scale = Vector2(1, 3.5)
mesh = SubResource("QuadMesh_1yypg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjArea"]
scale = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_d6tgi")

[node name="ProjParticle" type="CPUParticles2D" parent="."]
position = Vector2(0, 1)
emitting = false
amount = 1
one_shot = true

[node name="AutoDestructionTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="AutoDestructionTimer" to="." method="_on_auto_destruction_timer_timeout"]
